--- a/index.html
+++ b/index.html
@@ -1,161 +1,116 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
  <html lang="pt-br">
 	 <head>
 	 	<meta charset="utf-8">
-	 	<title>Exemplo 2.0</title>
-	 	<link rel="stylesheet" type="text/css" href="normalize.css">
-	 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
-		<link rel="stylesheet" type="text/css" href="style.css">
+	 	<meta name="viewport" content="width=device-width, inictial-scale=1">
+	 	<title></Exemplo3></title>
+	 	<meta name="description" content="Area de testes e treinos desenvolvimento web">
+	 	<meta name="keywords" content="exemplo, treno css, treino html, desenvolvimento web">
+	 	<meta name="robots" content="index, follow">
+	 	<meta name="author" content="Mauricio povinski de oliveira">
+	 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	 	<link rel="icon" href="img/icon.png">
+	 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 	 </head>
 	 <body>
-		 <main>
-		 	<header class="cabecalho">
-		 		<div class="logo">
-		 			<h1>Exemplo 2.0</h1>
-		 			<p>- Aqui ser onde se evolui</p>
-		 		</div>
-		 		<div class="caixa">
-		 			<form method="get">
-		 				<input type="text" name="nome" placeholder="pesquise aqui" id="botaop">
-		 				<button><i class="fas fa-search fa-lg"></i></button>
-		 			</form>
-		 		</div>
-		 	</header>
-		 	<article class="area-p">
-		 		<nav class="extras">
-		 			<ul>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab1" checked>
-		 					<label for="tab1">Inicio</label>
-		 					<div class="conteudo">
-		 						<article class="principal">
-		 							<header>
-		 								<h2>Seja bem vindo ao Exemplo</h2>
-		 							</header>
-		 							<p>
-		 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		 								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		 								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		 								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		 								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		 								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		 								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		 								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		 								tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		 								quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		 								consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		 								cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		 								proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		 							</p>
-		 							<footer>Fontes / cretidos</footer>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab2">
-		 					<label for="tab2">Pagina 2</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab3">
-		 					<label for="tab3">Pagina 3</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab4">
-		 					<label for="tab4">Pagina 4</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab5">
-		 					<label for="tab5">Pagina 5</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab6">
-		 					<label for="tab6">Pagina 6</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab7">
-		 					<label for="tab7">Pagina 7</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab8">
-		 					<label for="tab8">Pagina 8</label>
-		 					<div class="conteudo">
-		 						<article class="principal">
-		 							<h2></h2>
-		 							<p></p>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab9">
-		 					<label for="tab9">Pagina 9</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 				<li>
-		 					<input type="radio" name="abas" class="tabs" id="tab10">
-		 					<label for="tab10">Pagina 10</label>
-		 					<div class="conteudo">
-		 						<article>
-		 							<h2>ola</h2>
-		 						</article>
-		 					</div>
-		 				</li>
-		 			</ul>
-		 		</nav>
-		 	</article>
-		 </main>
-		 <section class="setor-final">
-		 	<div class="sobreresumo"></div>
-		 </section>
-		 <footer class="rodape">
-		 	<div class="social"></div>
-		 	<div class="ritens"></div>
-		 	<div class="rlogo"></div>
-		 </footer>
+	 	<header class="area">
+	 		<div class="header area">
+		 		<a href="index.html"><h1 class="logo">Exemplo 3.0</h1></a>
+		 		<button class="btn-menu"><i class="fas fa-bars fa-2x"></i></button>
+	 		</div>
+	 		<nav class="menu">
+	 			<a class="btn-f"><i class="fas fa-times-circle"></i></a>
+	 			<ul>
+	 				<li><a href="index.html">Inicio</a></li>
+	 				<li><a href="#">Favoritos</a></li>
+	 				<li><a href="#">Frases</a></li>
+	 				<li><a href="#">Postes</a></li>
+	 				<li><a href="#">Dicas</a></li>
+	 				<li><a href="#">Sobre</a></li>
+	 			</ul>
+	 		</nav>
+	 		<main class="meio area">
+		 		<article>
+		 			<div class="entrada area">
+		 				<h2>Seja Bem vindo, Onde se evolui</h2>
+		 				<p>Essse ser um site onde eu faço testes, eu sempre irei add algo novo.</p>
+		 				<footer><li>Versão do site: 3.0.2</li></footer>
+		 			</div>
+		 			<div class="exemplo-texto area">
+		 				<h2>Resumo sobre o site</h2>
+		 				<p>Criei esse site para divulgar e evoluir meus serviços de desenvolvedor web, suporte técnico de computador e celulares. <br>
+		 					Aqui você ira encontrar tudo sobre meus conhecimento e projetos.
+		 				</p>
+		 				<footer><li>sobre o mauricio</li></footer>
+		 			</div>
+		 			<div class="exemplo-texto area">
+		 				<h2>Texto sem sentido</h2>
+		 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		 				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		 				cillum dolore eu fugiat nulla pariatur.
+		 				</p>
+		 				<footer><li>apenas um exemplo de texto</li></footer>
+		 			</div>
+		 		</article>
+	 		</main>
+	 	</header>
+	 	<aside class="adicional">
+	 		<div class="social area">
+		 		<a href="#" class="btn-face"><i class="fab fa-facebook-square fa-lg"></i></a>
+		 	</div>
+	 		<div class="social">
+		 		<a href="#" class="btn-go"><i class="fab fa-google fa-lg"></i></a>
+		 	</div>
+		 	<div class="social">
+				<a href="#" class="btn-insta"><i class="fab fa-instagram fa-lg"></i></a>
+			</div>
+	 	</aside>
+	 	<section class="baixo area">
+	 		<div class="cadastro area">
+	 			<form method="post" action="">
+	 				<h3>Receba novidades por e-mail.</h3>
+	 				<input type="name" name="nome" placeholder="Seu nome completo">
+	 				<input type="email" name="email" placeholder="exemplo@ex.com">
+	 				<input type="submit" value="Enviar">
+	 			</form>
+	 		</div>
+	 	</section>
+	 	<footer class="rodape">
+	 		<div class="i-rodape area">
+	 			<ul>
+	 				<li><a href="#">Ajuda</a></li>
+	 				<li><a href="#">Termos</a></li>
+	 				<li><a href="#">Ajudar</a></li>
+	 			</ul>
+	 		</div>
+	 		<div class="f-rodape">
+	 			<small>© - 2018 mauricio todos direitos reservados.</small>
+	 		</div>
+	 	</footer>
+	 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+	 	<script>
+	 		$(".btn-menu").click(function(){
+	 			$(".menu").show();
+	 		});
+	 		$(".btn-f").click(function(){
+	 			$(".menu").hide();
+	 		})
+	 		$(".btn-menu").click(function(){
+	 			$(".social").hide();
+	 		});
+	 		$(".btn-f").click(function(){
+	 			$(".social").show();
+	 		})
+	 	</script>
 	 </body>
- </html>
+ </html> 
