--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	 	<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 	 </head>
 	 <body>
-	 	<header class="area">
-	 		<div class="header area">
+	 	<header class="topo">
+	 		<div class="header">
 		 		<a href="index.html"><h1 class="logo">Exemplo 3.0</h1></a>
+		 		<li>{Exemplo 3}</li>
 		 		<button class="btn-menu"><i class="fas fa-bars fa-2x"></i></button>
 	 		</div>
 	 		<nav class="menu">
@@ -32,21 +33,25 @@
 	 				<li><a href="#">Sobre</a></li>
 	 			</ul>
 	 		</nav>
-	 		<main class="meio area">
+	 		<main class="meio">
 		 		<article>
-		 			<div class="entrada area">
+		 			<div class="entrada">
 		 				<h2>Seja Bem vindo, Onde se evolui</h2>
 		 				<p>Essse ser um site onde eu faço testes, eu sempre irei add algo novo.</p>
 		 				<footer><li>Versão do site: 3.0.2</li></footer>
 		 			</div>
-		 			<div class="exemplo-texto area">
+		 			<div class="imagen">
+		 				<h2>Área de trabalho</h2>
+		 				<img src="img/exemplo.png" title="print" alt="html e css">
+		 			</div>
+		 			<div class="exemplo-texto1">
 		 				<h2>Resumo sobre o site</h2>
 		 				<p>Criei esse site para divulgar e evoluir meus serviços de desenvolvedor web, suporte técnico de computador e celulares. <br>
 		 					Aqui você ira encontrar tudo sobre meus conhecimento e projetos.
 		 				</p>
 		 				<footer><li>sobre o mauricio</li></footer>
 		 			</div>
-		 			<div class="exemplo-texto area">
+		 			<div class="exemplo-texto2">
 		 				<h2>Texto sem sentido</h2>
 		 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -65,7 +70,7 @@
 	 		</main>
 	 	</header>
 	 	<aside class="adicional">
-	 		<div class="social area">
+	 		<div class="social">
 		 		<a href="#" class="btn-face"><i class="fab fa-facebook-square fa-lg"></i></a>
 		 	</div>
 	 		<div class="social">
@@ -75,18 +80,21 @@
 				<a href="#" class="btn-insta"><i class="fab fa-instagram fa-lg"></i></a>
 			</div>
 	 	</aside>
-	 	<section class="baixo area">
-	 		<div class="cadastro area">
+	 	<section class="baixo">
+	 		<div class="cadastro">
 	 			<form method="post" action="">
 	 				<h3>Receba novidades por e-mail.</h3>
-	 				<input type="name" name="nome" placeholder="Seu nome completo">
-	 				<input type="email" name="email" placeholder="exemplo@ex.com">
+	 				<div class="email">
+	 					<input type="email" name="email" placeholder="exemplo@ex.com">
+	 				</div>
+	 				<div class="btn-email">
 	 				<input type="submit" value="Enviar">
+	 				</div>
 	 			</form>
 	 		</div>
 	 	</section>
 	 	<footer class="rodape">
-	 		<div class="i-rodape area">
+	 		<div class="i-rodape">
 	 			<ul>
 	 				<li><a href="#">Ajuda</a></li>
 	 				<li><a href="#">Termos</a></li>
