--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	 			<a class="btn-f"><i class="fas fa-times-circle"></i></a>
 	 			<ul>
 	 				<li><a href="index.html">Inicio</a></li>
-	 				<li><a href="#">Favoritos</a></li>
+	 				<li><a href="https://racheter.github.io/exemplo2/">Exemplo2</a></li>
 	 				<li><a href="#">Frases</a></li>
 	 				<li><a href="#">Postes</a></li>
 	 				<li><a href="#">Dicas</a></li>
